[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/images/triangle.svg" type="Texture" id=1]
[ext_resource path="res://entities/turret/hurtbox.gd" type="Script" id=2]
[ext_resource path="res://entities/turret/turret.gd" type="Script" id=3]
[ext_resource path="res://libs/state_machine/state_machine.gd" type="Script" id=4]
[ext_resource path="res://entities/turret/states/destroyed.gd" type="Script" id=5]
[ext_resource path="res://entities/turret/states/aiming.gd" type="Script" id=6]
[ext_resource path="res://entities/turret/states/shooting.gd" type="Script" id=7]
[ext_resource path="res://entities/turret/aim.gd" type="Script" id=8]
[ext_resource path="res://entities/turret/graphics.gd" type="Script" id=9]
[ext_resource path="res://entities/turret/states/turn_off.gd" type="Script" id=10]
[ext_resource path="res://assets/audio/turret_shoot.ogg" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 75, 90 )

[sub_resource type="CircleShape2D" id=2]
radius = 20.2402

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Graphics:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Graphics:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Aim:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Hurtbox/CollisionShape:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "destroy"
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 720.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Graphics:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Aim:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hurtbox/CollisionShape:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 0.8 ), Vector2( 0.8, 1.25 ), Vector2( 1.25, 0.8 ), Vector2( 1, 1 ) ]
}

[node name="Turret" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="SFX" type="Node" parent="."]

[node name="shoot" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 11 )
volume_db = -6.0
bus = "Sound"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.5, 0 )
scale = Vector2( 0.4, 0.4 )
shape = SubResource( 1 )

[node name="Aim" type="Node2D" parent="."]
visible = false
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Line2D" type="Line2D" parent="Aim"]
position = Vector2( 20, 0 )
points = PoolVector2Array( 0, 0, 2000, 0 )
width = 6.0
default_color = Color( 0.607843, 0.607843, 0.607843, 1 )

[node name="Graphics" type="Node2D" parent="."]
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="graphics" type="Node2D" parent="Graphics"]
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )

[node name="Body" type="Sprite" parent="Graphics/graphics"]
modulate = Color( 1, 0, 0.301961, 1 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Hurtbox" type="Area2D" parent="." groups=[
"turret",
]]
collision_layer = 16
collision_mask = 16
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape2D" parent="Hurtbox"]
visible = false
position = Vector2( -3.78632, 0.222725 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="LaserSpawn" type="Position2D" parent="."]
position = Vector2( 20, 0 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )
actor_path = NodePath("..")

[node name="Aiming" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
fsm_path = NodePath("..")

[node name="Timer" type="Timer" parent="StateMachine/Aiming"]
wait_time = 1.5
one_shot = true

[node name="Tween" type="Tween" parent="StateMachine/Aiming"]

[node name="Shooting" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
fsm_path = NodePath("..")

[node name="Timer" type="Timer" parent="StateMachine/Shooting"]
wait_time = 0.5
one_shot = true

[node name="Destroyed" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
fsm_path = NodePath("..")

[node name="TurnOff" type="Node" parent="StateMachine"]
script = ExtResource( 10 )
fsm_path = NodePath("..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 3 )
anims/destroy = SubResource( 4 )
anims/shoot = SubResource( 5 )
[connection signal="turn_off" from="." to="StateMachine/Aiming" method="_on_Turret_turn_off"]
[connection signal="turn_off" from="." to="StateMachine/Shooting" method="_on_Turret_turn_off"]
[connection signal="area_entered" from="Hurtbox" to="Hurtbox" method="_on_area_entered"]
[connection signal="destroyed" from="Hurtbox" to="StateMachine/Aiming" method="_on_Hurtbox_destroyed"]
[connection signal="destroyed" from="Hurtbox" to="StateMachine/Shooting" method="_on_Hurtbox_destroyed"]
[connection signal="destroyed" from="Hurtbox" to="." method="destroyed"]
[connection signal="timeout" from="StateMachine/Aiming/Timer" to="StateMachine/Aiming" method="_on_Timer_timeout"]
[connection signal="spawn_laser" from="StateMachine/Shooting" to="." method="spawn_laser"]
[connection signal="state_entered" from="StateMachine/Shooting" to="SFX/shoot" method="play"]
[connection signal="timeout" from="StateMachine/Shooting/Timer" to="StateMachine/Shooting" method="_on_Timer_timeout"]
